--- a/pkg/templates/signup.html
+++ b/pkg/templates/signup.html
@@ -29,7 +29,7 @@
                 
                 <form action="/newUser" method="POST" enctype="multipart/form-datass">
                     <div class="form-floating mb-4">
-                        <input type="text" class="form-control" id="floatingInput" name="name"  required>
+                        <input type="text" class="form-control" id="floatingInput" name="name" placeholder="Name"  required>
                         <label for="floatingInput">Full Name</label>
                     </div>
 
@@ -49,7 +49,7 @@
                     </div>
                     {{if .}}
                     <div class=" text-center text-danger mb-2">
-                        <label >User ID with this email already exists!</label>
+                        <label >User ID not available!</label>
                     </div>
                     {{end}}
                     <div class="d-flex justify-content-center">
