--- a/pkg/templates/partials/adminSidebar.html
+++ b/pkg/templates/partials/adminSidebar.html
@@ -31,7 +31,7 @@
                 <i class="fas fa-right-to-bracket fa-fw me-3"></i><span>Book Requests</span>
             </a>
 
-            <a href=#  
+            <a href="/cvt_admin"
                 class="list-group-item list-group-item-action py-2 ripple {{if eq .path "/cvt_admin"}} active {{end}} "
                 {{if eq .path "/cvt_admin"}} aria-current="true" {{end}}>
                 <i class="fas fa-user-lock fa-fw me-3"></i><span>Admin Requests</span>
