--- a/pkg/templates/partials/adminTopbar.html
+++ b/pkg/templates/partials/adminTopbar.html
@@ -37,7 +37,7 @@
                 <li class="nav-item">
                     <a class="nav-link {{if eq .path "/cvt_admin" }} active {{end}}"
                     {{if eq .path "/cvt_admin" }} aria-current="page" {{end}}
-                        href="{{if eq .path "/cvt_admin" }} # {{else}} # {{end}}"><i
+                        href="{{if eq .path "/cvt_admin" }}{{else}}/cvt_admin{{end}}"><i
                             class="fas fa-user-lock fa-fw me-3"></i><span>Admin Requests</span></a>
                 </li>
                 <li class="nav-item">
