--- a/pkg/templates/partials/userSidebar.html
+++ b/pkg/templates/partials/userSidebar.html
@@ -35,7 +35,7 @@
                     <i class="fas fa-money-bill fa-fw me-3"></i><span>Fines</span>
                 </a>
                 
-                <a href=" {{if eq .path "/cvt_admin"}} # {{else}} # {{end}}"
+                <a href="{{if eq .path "/cvt_admin"}} # {{else}} /cvt_admin {{end}}"
                     class="list-group-item list-group-item-action py-2 ripple {{if eq .path "/cvt_admin" }} active {{end}}"
                     {{ if eq .path "/cvt_admin"  }} aria-current="true" {{end}}>
                     <i class="fas fa-user-lock fa-fw me-3"></i><span>Request Admin Status</span>
