--- a/pkg/templates/bookCatalog.html
+++ b/pkg/templates/bookCatalog.html
@@ -1,155 +1,124 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kunal_Library</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <style>
-        html {
-            height:100vh;
-            width:100vw;
-        }
-        body{
-            height:100%;
-            width:100%;
-        }
-        .navbar-brand, .font{
-            color: white;
-            font-size: 1.5rem;
-            padding: 5px;
-            text-align: center;
-            font-weight: bolder;
-        }
-        .desc{
-            max-width:500px;
-            max-height: 5rem;
-            overflow-y:scroll;
-            -webkit-box-shadow: inset 0px -45px 62px -40px rgba(66, 68, 90, 0.5);
-            -moz-box-shadow: inset 0px -45px 62px -40px rgba(66, 68, 90, 0.5);
-            box-shadow: inset 0px -45px 62px -40px rgba(66, 68, 90, 0.256);
-        }
-        /* width */
-        ::-webkit-scrollbar {
-            width: 10px;
-        }
-        
-        /* Track */
-        ::-webkit-scrollbar-track {
-            background: #f1f1f1;
-        }
-        
-        /* Handle */
-        ::-webkit-scrollbar-thumb {
-            background: #888;
-            border-radius: 8px;
-        }
-        
-        /* Handle on hover */
-        ::-webkit-scrollbar-thumb:hover {
-            background: #555;
-        }
-    </style>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="/styles/common.css" />
+
 </head>
+
 <body>
     {{if eq .role "admin"}}
-        {{template "adminTopbar" .}}
+    {{template "adminTopbar" .}}
     {{else}}
-        {{template "userTopbar" .}}
-    {{ end }}
+    {{template "userTopbar" .}}
+    {{end}}
     <div class="d-flex w-100 h-100">
         {{if eq .role "admin"}}
-            {{template "adminSidebar" .}}
+        {{template "adminSidebar" .}}
         {{else}}
-            {{template "userSidebar" .}}
+        {{template "userSidebar" .}}
         {{ end }}
 
         <div class="d-flex flex-column w-100 ">
-            <div class="fw-bolder p-2 " style="font-family: Arial, roboto , monospace; font-size:2.5rem; text-align:center;">Book Catalog</div>
-           
-            <form class="d-flex align-self-center my-2" method="get" action="/books?page=1&search={{.search}}" role="search">
-                <input class="form-control me-2" style="max-width:250px;" type="search" name="search" placeholder="Search  by name" aria-label="Search">
+            <div class="fw-bolder p-2 my-heading size25 txt-center">Book Catalog</div>
+
+            <form class="d-flex align-self-center my-2" method="get" action="/books?page=1&search={{.search}}"
+                role="search">
+                <input class="form-control me-2 search-input" type="search" name="search" placeholder="Search  by name"
+                    aria-label="Search">
                 <button class="btn btn-outline-success" type="submit">Search</button>
             </form>
 
             <div class="listPage my-2">
                 <div class="list d-flex flex-column justify-content-between">
-                    <div class="d-flex flex-row justify-content-between border border-secondary" style="margin-left:10vw; margin-right:10vw;">
+                    <div class="d-flex flex-row justify-content-between border border-secondary heading-margin">
                         <div class="mx-4 fs-4 text-muted">Book Details</div>
                         <div class="fs-4 text-muted pe-2">BUID</div>
                     </div>
-                    
-                    {{range $i,$book := .data}}
-                        <div class="d-flex flex-row justify-content-between border border-top-0 border-secondary p-2" style="margin-left:10vw; margin-right:10vw;">
-                            <div class="d-flex flex-row">
-                                <div class=" fs-3"> {{add $i 1}}.&nbsp; </div>
-                                <div class="d-flex flex-column">
 
-                                    <div class="fs-3">{{$book.NAME}}</div>
-                                    
-                                    <div class="desc">{{ $book.DESCRIPTION }}</div>
-                                    <div>
-                                        {{if (ge $book.CHECKIN 1)}}
-                                            Status: <span style="color: rgb(12, 224, 12);">Available</span>
-                                        {{else}}
-                                            Status: <span style="color: red;">Checked Out</span>
-                                        {{end}}
-                                    </div>
-                                                        
+                    {{range $i,$book := .data}}
+                    <div
+                        class="d-flex flex-row justify-content-between border border-top-0 border-secondary p-2 heading-margin">
+                        <div class="d-flex flex-row">
+                            <div class=" fs-3"> {{add $i 1}}.&nbsp; </div>
+                            <div class="d-flex flex-column">
+
+                                <div class="fs-3">{{$book.NAME}}</div>
+
+                                <div class="desc">{{ $book.DESCRIPTION }}</div>
+                                <div>
+                                    {{if (ge $book.CHECKIN 1)}}
+                                    Status: <span class="green">Available</span>
+                                    {{else}}
+                                    Status: <span class="red">Checked Out</span>
+                                    {{end}}
                                 </div>
-                            </div>
-                            <div class="d-flex flex-column justify-content-evenly">
-                                <div class=" mx-3">{{$book.BUID}}</div>
-                                    <a href="/books/{{$book.BUID}}"><button type="button" class="btn btn-primary">Info</button></a>
+
                             </div>
                         </div>
-                            
+                        <div class="d-flex flex-column justify-content-evenly">
+                            <div class=" mx-3">{{$book.BUID}}</div>
+                            <a href="/books/{{$book.BUID}}"><button type="button"
+                                    class="btn btn-primary">Info</button></a>
+                        </div>
+                    </div>
+
                     {{end}}
 
                 </div>
                 <nav aria-label="Page navigation example" class="mt-4">
                     <ul class="pagination justify-content-center">
-                        
+
                         <li class="page-item {{ if eq .page 1}} disabled {{end}} ">
                             {{ if .search }}
-                                <a class="page-link" href="/books?page={{ sub .page 1 }}&search={{.search}}">Previous</a>
+                            <a class="page-link" href="/books?page={{ sub .page 1 }}&search={{.search}}">Previous</a>
                             {{else}}
-                                <a class="page-link" href="/books?page={{ sub .page 1 }}">Previous</a>
+                            <a class="page-link" href="/books?page={{ sub .page 1 }}">Previous</a>
                             {{end}}
                         </li>
                         {{ range $i,$p := .no_of_pages }}
-                            {{ if eq (add $i 1) $.page }}
-                                <li class="page-item active"><a class="page-link" href="">{{add $i 1}}</a></li>
-                            {{else}}
-                                {{if $.search}}
-                                    <li class="page-item"><a class="page-link" href="/books?page={{ sub $.page 1 }}&search={{$.search}}">{{add $i 1}}</a></li>
-                                {{else}}
-                                    <li class="page-item"><a class="page-link" href="/books?page={{add $i 1}}">{{add $i 1}}</a></li>
-                                {{end}}
-                            {{end}}
+                        {{ if eq (add $i 1) $.page }}
+                        <li class="page-item active"><a class="page-link" href="">{{add $i 1}}</a></li>
+                        {{else}}
+                        {{if $.search}}
+                        <li class="page-item"><a class="page-link"
+                                href="/books?page={{ sub $.page 1 }}&search={{$.search}}">{{add $i 1}}</a></li>
+                        {{else}}
+                        <li class="page-item"><a class="page-link" href="/books?page={{add $i 1}}">{{add $i 1}}</a></li>
                         {{end}}
-                        
+                        {{end}}
+                        {{end}}
+
                         <li class="page-item  {{if eq .page (len .no_of_pages) }} disabled {{end}} ">
                             {{if .search}}
-                                <a class="page-link" href="/books?page={{add .page 1}}&search={{.search}}"> &nbsp; Next &nbsp; </a>
+                            <a class="page-link" href="/books?page={{add .page 1}}&search={{.search}}"> &nbsp; Next
+                                &nbsp; </a>
                             {{else}}
-                                <a class="page-link" href="/books?page={{add .page 1}}"> &nbsp; Next &nbsp; </a>
+                            <a class="page-link" href="/books?page={{add .page 1}}"> &nbsp; Next &nbsp; </a>
                             {{end}}
                         </li>
                     </ul>
                 </nav>
             </div>
             {{ if eq .role "admin"}}
-                <div class="d-flex flex-column align-items-center">
-                    <form action="/admin/addbook" method="GET">
-                        <button class="btn btn-success" type="submit">Add New Book</button>
-                    </form>
-                </div>
+            <div class="d-flex flex-column align-items-center">
+                <form action="/admin/addbook" method="GET">
+                    <button class="btn btn-success" type="submit">Add New Book</button>
+                </form>
+            </div>
             {{end}}
         </div>
     </div>
     <script src="https://kit.fontawesome.com/e77db821fe.js" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
 
 </body>
+
 </html>
