--- a/pkg/templates/partials/adminSidebar.html
+++ b/pkg/templates/partials/adminSidebar.html
@@ -36,13 +36,14 @@
                 {{if eq .path "/cvt_admin"}} aria-current="true" {{end}}>
                 <i class="fas fa-user-lock fa-fw me-3"></i><span>Admin Requests</span>
             </a>
-
+            <!-- TODO: The Users and Fines functionalities are left for future  -->
             <a href="#" class="list-group-item list-group-item-action py-2 ripple">
                 <i class="fas fa-users fa-fw me-3"></i><span>Users</span>
             </a>
             <a href="#" class="list-group-item list-group-item-action py-2 ripple">
                 <i class="fas fa-money-bill fa-fw me-3"></i><span>Fines</span>
             </a>
+            <!-- TODo:end -->
             <a href="/logout" class="list-group-item list-group-item-action py-2 ripple">
                 <i class="fas fa-power-off fa-fw me-3"></i><span>Logout</span>
             </a>
