--- a/pkg/templates/account.html
+++ b/pkg/templates/account.html
@@ -5,24 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kunal_Library</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <style>
-        html {
-            height:100vh;
-            width:100vw;
-        }
-        body{
-            height:100%;
-            width:100%;
-        }
-        .navbar-brand, .font{
-            color: white;
-            font-size: 1.5rem;
-            padding: 5px;
-            text-align: center;
-            font-weight: bolder;
-        }
-        
-    </style>
+    <link rel="stylesheet" href="/styles/common.css"/>
+   
 </head>
 <body>
     {{if eq .role "admin"}}
@@ -40,7 +24,7 @@
 
 
         <div class="d-flex flex-column w-100 " >
-            <div class="fw-bolder fs-2 p-2 " style="font-family: Arial, roboto , monospace; text-align:center;">Edit Account Details</div>
+            <div class="fw-bolder fs-2 p-2 my-heading size25 txt-center">Edit Account Details</div>
             <form class="mx-5 g-3" action="/account" method="POST">
                 
                 <label  class="col-md-1 col-form-label text-align-center">Name:</label>
