--- a/pkg/templates/adminDash.html
+++ b/pkg/templates/adminDash.html
@@ -5,53 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kunal_Library</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <style>
-        html {
-            height:100vh;
-            width:100vw;
-        }
-        body{
-            height:100%;
-            width:100%;
-        }
-        .bigboxer{
-            flex:1;
-        
-        }
-        .boxer{
-
-            align-items: stretch;
-        }
-        .boxes{
-            flex:1 1;
-            box-shadow: rgba(0, 0, 0, 0.319) 0px 5px 15px 0px;
-            border-radius: 8px;
-            background: rgb(13,7,112);
-            background: linear-gradient(321deg, rgba(13,7,112,1) 0%, rgba(9,9,121,1) 35%, rgba(0,212,255,1) 100%);
-            width:15vw; 
-            min-height:15vh;
-            height: min-content; 
-            min-width:200px;   
-            max-width: 250px;
-            display: flex;
-            flex-direction: column;
-            justify-content: space-evenly;
-            align-items: center;
-            color: white;
-            font-size: 1.5rem;
-            padding: 5px;
-            text-align: center;
-        }
-        .navbar-brand{
-            color: white;
-            font-size: 1.5rem;
-            padding: 5px;
-            text-align: center;
-            font-weight: bolder;
-        }
-    </style>
-        <script  src="https://kit.fontawesome.com/e77db821fe.js" crossorigin="anonymous" defer></script>
-        <script  src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous" defer></script>
+    <link rel="stylesheet" href="/styles/common.css"/>
+    <script  src="https://kit.fontawesome.com/e77db821fe.js" crossorigin="anonymous" defer></script>
+    <script  src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous" defer></script>
     
 </head>
 <body >
@@ -59,7 +15,7 @@
     <div class="d-flex h-100">
         {{template "adminSidebar" .}}
         <div class="d-flex flex-column  bigboxer ">
-            <div class="fw-bolder p-2 " style="font-family: Arial, roboto , monospace; font-size:2.5rem; text-align:center;">Welcome {{.name}}!  </div>
+            <div class="fw-bolder p-2 my-heading size25 txt-center" >Welcome {{.name}}!  </div>
             <div class="d-flex flex-row flex-wrap justify-content-evenly my-2 boxer"  >
                 <div class="m-2 boxes" >
                     <span>{{.no_of_books}}</span>
@@ -86,7 +42,7 @@
 
             <div class="mx-5">
         
-                <div class="text-muted fs-4 mx-5 p-2 " style="font-family: Arial, roboto , monospace; text-align:left;">Borrowed Books</div>
+                <div class="text-muted fs-4 mx-5 p-2 my-heading txt-left" >Borrowed Books</div>
 
                 {{if eq (len .books) 0}}
                     <h3 class="text-muted fw-normal  fs-4">=>You have not checked out any books...</h3>
@@ -121,7 +77,7 @@
             <div class="mx-5 my-3">
                 
                 <p class="d-inline-flex gap-1">
-                    <div class="text-muted fs-4 ms-5 me-3 p-2 d-inline" style="font-family: Arial, roboto , monospace; text-align:left;">Borrowing history</div>
+                    <div class="text-muted fs-4 ms-5 me-3 p-2 d-inline my-heading txt-left" >Borrowing history</div>
                     <button class="btn btn-primary " type="button" data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
                         Show <i class="fa-solid fa-caret-down"></i>
                     </button>
