--- a/pkg/templates/bookPage.html
+++ b/pkg/templates/bookPage.html
@@ -5,23 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kunal_Library</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <style>
-        html {
-            height:100vh;
-            width:100vw;
-        }
-        body{
-            height:100%;
-            width:100%;
-        }
-        .navbar-brand, .font{
-            color: white;
-            font-size: 1.5rem;
-            padding: 5px;
-            text-align: center;
-            font-weight: bolder;
-        }
-    </style>
+    <link rel="stylesheet" href="/styles/common.css"/>
+    
 </head>
 <body>
     {{if eq .role "admin"}}
@@ -37,7 +22,7 @@
         {{ end }}
 
         <div class="d-flex flex-column w-100 ">
-            <div class="fst-italic fw-bolder px-4 pb-2 pt-5" style="font-family: Arial, roboto , monospace; font-size:2.25rem; text-align:left;">
+            <div class="fst-italic fw-bolder px-4 pb-2 pt-5 my-heading size25 txt-left" >
                 {{ .book.NAME }}
                 {{if eq .role "admin"}}
                     <span>
@@ -47,7 +32,7 @@
                     </span>
                     <span>
                         <a href="/admin/deletebook/{{ .book.BUID  }}" class="fw-normal fs-3 ">
-                            <i class="fa-solid fa-trash-can fa-fw ms-3 me-3" style="color: #e62d2d;"></i>
+                            <i class="fa-solid fa-trash-can fa-fw ms-3 me-3 red2" ></i>
                         </a>
                     </span>
                     
@@ -57,21 +42,21 @@
        
             
  
-            <div class="fst-italic px-4 pb-2" style="font-family: Arial, roboto , monospace; font-size:1.5rem; text-align:left;">BUID: {{.book.BUID}}</div>            
+            <div class="fst-italic px-4 pb-2 my-heading size15 txt-left">Book ID: {{.book.BUID}}</div>            
             
             {{if eq .role "admin"}}
-                <div class="fst-italic px-4 pb-2" style="font-family: Arial, roboto , monospace; font-size:1.25rem; text-align:left;"> {{ sub .book.TOTAL .book.CHECKIN}}/{{.book.TOTAL}} copies checked out. (You can't delete this book till all copies are checked in.)</div>        
+                <div class="fst-italic px-4 pb-2 my-heading size125 txt-left" > {{ sub .book.TOTAL .book.CHECKIN}}/{{.book.TOTAL}} copies checked out. (You can't delete this book till all copies are checked in.)</div>        
             {{end}}
              
             <div class="d-flex flex-row justify-content-between px-4" >
                 <div class="d-flex flex-row">
                     <div class="d-flex flex-column">
-                        <div class="text-muted mb-3" style="font-size:1.3rem">{{.book.DESCRIPTION}} 
+                        <div class="text-muted mb-3 size125" >{{.book.DESCRIPTION}} 
                             <div class="fs-3">
                                 {{ if ge .book.CHECKIN 1}}
-                                    Status: <span style="color: rgb(12, 224, 12);">Available</span>
+                                    Status: <span class="green">Available</span>
                                 {{else}}
-                                    Status: <span style="color: red;">Checked Out</span>
+                                    Status: <span class="red">Checked Out</span>
                                 {{end}}
                             </div>             
                         </div>
