--- a/pkg/templates/partials/adminTopbar.html
+++ b/pkg/templates/partials/adminTopbar.html
@@ -40,12 +40,14 @@
                         href="{{if eq .path "/cvt_admin" }}{{else}}/cvt_admin{{end}}"><i
                             class="fas fa-user-lock fa-fw me-3"></i><span>Admin Requests</span></a>
                 </li>
+                <!-- TODO: The Users and Fines functionalities are left for future  -->
                 <li class="nav-item">
                     <a class="nav-link" href="#"><i class="fas fa-users fa-fw me-3"></i><span>Users</span></a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#"><i class="fas fa-money-bill fa-fw me-3"></i><span>Fines</span></a>
                 </li>
+                <!-- TODO:end -->
                 <li class="nav-item">
                     <a class="nav-link" href="/logout"><i
                             class="fas fa-power-off fa-fw me-3"></i><span>Logout</span></a>
