--- a/pkg/templates/pendingReq.html
+++ b/pkg/templates/pendingReq.html
@@ -5,51 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kunal_Library</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <style>
-        html {
-            height:100vh;
-            width:100vw;
-        }
-        body{
-            height:100%;
-            width:100%;
-        }
-        .navbar-brand, .font{
-            color: white;
-            font-size: 1.5rem;
-            padding: 5px;
-            text-align: center;
-            font-weight: bolder;
-        }
-        .desc{
-            max-width:500px;
-            max-height: 5rem;
-            overflow-y:scroll;
-            -webkit-box-shadow: inset 0px -45px 62px -40px rgba(66, 68, 90, 0.5);
-            -moz-box-shadow: inset 0px -45px 62px -40px rgba(66, 68, 90, 0.5);
-            box-shadow: inset 0px -45px 62px -40px rgba(66, 68, 90, 0.256);
-        }
-        /* width */
-        ::-webkit-scrollbar {
-            width: 10px;
-        }
-        
-        /* Track */
-        ::-webkit-scrollbar-track {
-            background: #f1f1f1;
-        }
-        
-        /* Handle */
-        ::-webkit-scrollbar-thumb {
-            background: #888;
-            border-radius: 8px;
-        }
-        
-        /* Handle on hover */
-        ::-webkit-scrollbar-thumb:hover {
-            background: #555;
-        }
-    </style>
+    <link rel="stylesheet" href="/styles/common.css"/>
+
 </head>
 <body>
     {{if eq .role "admin"}}
@@ -65,114 +22,112 @@
         {{ end }}
 
         <div class="d-flex flex-column w-100 " >
-            <div class="fw-bolder p-2 " style="font-family: Arial, roboto , monospace; font-size:2.5rem; text-align:center;">Pending Requests</div>
+            <div class="fw-bolder p-2 my-heading size25 txt-center" >Pending Requests</div>
             
-                {{if eq .role "admin"}}
-                    <div class="text-muted fs-4 mx-5 p-2 " style="font-family: Arial, roboto , monospace; text-align:left;">Checkout Requests</div>
-                    <div class="" style="margin-left:12vw; margin-right:12vw;">
-                        <table class="table table-striped text-aligned-center me-2">
-                            <thead>
+            {{if eq .role "admin"}}
+                <div class="text-muted fs-4 mx-5 p-2 my-heading txt-left" >Checkout Requests</div>
+                <div class="table-margin" >
+                    <table class="table table-striped text-aligned-center me-2">
+                        <thead>
+                            <tr>
+                                <th scope="col">#</th>
+                                <th scope="col">User Name</th>
+                                <th scope="col">Book Name</th>
+                                <th scope="col">Options</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            {{range $i,$entry := .checkouts}}
                                 <tr>
-                                    <th scope="col">#</th>
-                                    <th scope="col">User Name</th>
-                                    <th scope="col">Book Name</th>
-                                    <th scope="col">Options</th>
+                                    <th scope="row">{{add $i 1}}</th>
+                                    <td> &#40;{{ $entry.UUID }}&#41;{{ $entry.USER_NAME }}</td>
+                                    <td> <a href="/books/{{ $entry.BUID }}"> &#40;{{ $entry.BUID }}&#41;{{ $entry.BOOK_NAME }}</a></td>
+                                    <td class="fs-5 " >
+                                        <a href="/admin/approve/{{ $entry.UUID }}/{{ $entry.BUID }}"><i class="fa-solid fa-thumbs-up px-2 approve" ></i></a>
+                                        <a href="/admin/deny/{{ $entry.UUID }}/{{ $entry.BUID }}"><i class="fa-solid fa-thumbs-down px-2 deny" ></i></a>
+                                    </td>                                                                                      
                                 </tr>
-                            </thead>
-                            <tbody>
-                                {{range $i,$entry := .checkouts}}
-                                    <tr>
-                                        <th scope="row">{{add $i 1}}</th>
-                                        <td> &#40;{{ $entry.UUID }}&#41;{{ $entry.USER_NAME }}</td>
-                                        <td> <a href="/books/{{ $entry.BUID }}"> &#40;{{ $entry.BUID }}&#41;{{ $entry.BOOK_NAME }}</a></td>
-                                        <td class="fs-5 " >
-                                            <a href="/admin/approve/{{ $entry.UUID }}/{{ $entry.BUID }}"><i class="fa-solid fa-thumbs-up px-2" style="color: #63E6BE;"></i></a>
-                                            <a href="/admin/deny/{{ $entry.UUID }}/{{ $entry.BUID }}"><i class="fa-solid fa-thumbs-down px-2" style="color: #f61e1e;"></i></a>
-                                        </td>                                                                                      
-                                    </tr>
-                                {{end}}
-                            </tbody>
-                        </table>
-                    </div>
+                            {{end}}
+                        </tbody>
+                    </table>
+                </div>
 
-                    
-                    <div class="text-muted fs-4 mx-5 p-2 " style="font-family: Arial, roboto , monospace; text-align:left;">Checkin Requests</div>
-                    <div class="" style="margin-left:12vw; margin-right:12vw;">
-                        <table class="table table-striped text-aligned-center me-2">
-                            <thead>
+                
+                <div class="text-muted fs-4 mx-5 p-2 my-heading txt-left" >Checkin Requests</div>
+                <div class="table-margin" >
+                    <table class="table table-striped text-aligned-center me-2">
+                        <thead>
+                            <tr>
+                                <th scope="col">#</th>
+                                <th scope="col">User Name</th>
+                                <th scope="col">Book Name</th>
+                                <th scope="col">Options</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            {{range $i,$entry := .checkins}}
                                 <tr>
-                                    <th scope="col">#</th>
-                                    <th scope="col">User Name</th>
-                                    <th scope="col">Book Name</th>
-                                    <th scope="col">Options</th>
+                                    <th scope="row">{{add $i 1}}</th>
+                                    <td> &#40;{{ $entry.UUID }}&#41;{{ $entry.USER_NAME }}</td>
+                                    <td> <a href="/books/{{ $entry.BUID }}"> &#40;{{ $entry.BUID }}&#41;{{ $entry.BOOK_NAME }}</a></td>
+                                    <td class="fs-5 ">
+                                        <a href="/admin/approve/{{ $entry.UUID }}/{{ $entry.BUID }}"><i class="fa-solid fa-thumbs-up px-2 approve" ></i></a>
+                                        <a href="/admin/deny/{{ $entry.UUID }}/{{ $entry.BUID }}"><i class="fa-solid fa-thumbs-down px-2 deny" ></i></a>
+                                    </td>                                        
                                 </tr>
-                            </thead>
-                            <tbody>
-                                {{range $i,$entry := .checkins}}
-                                    <tr>
-                                        <th scope="row">{{add $i 1}}</th>
-                                        <td> &#40;{{ $entry.UUID }}&#41;{{ $entry.USER_NAME }}</td>
-                                        <td> <a href="/books/{{ $entry.BUID }}"> &#40;{{ $entry.BUID }}&#41;{{ $entry.BOOK_NAME }}</a></td>
-                                        <td class="fs-5 ">
-                                            <a href="/admin/approve/{{ $entry.UUID }}/{{ $entry.BUID }}"><i class="fa-solid fa-thumbs-up px-2" style="color: #63E6BE;"></i></a>
-                                            <a href="/admin/deny/{{ $entry.UUID }}/{{ $entry.BUID }}"><i class="fa-solid fa-thumbs-down px-2" style="color: #f61e1e;"></i></a>
-                                        </td>                                        
-                                    </tr>
-                                {{end}}
-                            </tbody>
-                        </table>
-                    </div>
-                {{end}}
+                            {{end}}
+                        </tbody>
+                    </table>
+                </div>
+            {{end}}
 
-                {{if eq .role "user"}}
-                    
-                    <div class="text-muted fs-4 mx-5 p-2 " style="font-family: Arial, roboto , monospace; text-align:left;">Your Pending Checkout Requests</div>
-                    <div class="" style="margin-left:12vw; margin-right:12vw;">
-                        <table class="table table-striped text-aligned-center me-2">
-                            <thead>
+            {{if eq .role "user"}}
+                
+                <div class="text-muted fs-4 mx-5 p-2 my-heading txt-left">Your Pending Checkout Requests</div>
+                <div class="table-margin" >
+                    <table class="table table-striped text-aligned-center me-2">
+                        <thead>
+                            <tr>
+                                <th scope="col">#</th>
+                                <th scope="col">User Name</th>
+                                <th scope="col">Book Name</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            {{range $i,$entry := .checkouts}}
                                 <tr>
-                                    <th scope="col">#</th>
-                                    <th scope="col">User Name</th>
-                                    <th scope="col">Book Name</th>
+                                    <th scope="row">{{add $i 1}}</th>
+                                    <td> &#40;{{ $entry.UUID }}&#41;{{ $entry.USER_NAME }}</td>
+                                    <td> <a href="/books/{{ $entry.BUID }}"> &#40;{{ $entry.BUID }}&#41;{{ $entry.BOOK_NAME }}</a></td>                                                                                   
                                 </tr>
-                            </thead>
-                            <tbody>
-                                {{range $i,$entry := .checkouts}}
-                                    <tr>
-                                        <th scope="row">{{add $i 1}}</th>
-                                        <td> &#40;{{ $entry.UUID }}&#41;{{ $entry.USER_NAME }}</td>
-                                        <td> <a href="/books/{{ $entry.BUID }}"> &#40;{{ $entry.BUID }}&#41;{{ $entry.BOOK_NAME }}</a></td>                                                                                   
-                                    </tr>
-                                {{end}}
-                            </tbody>
-                        </table>
-                    </div>
+                            {{end}}
+                        </tbody>
+                    </table>
+                </div>
 
-                    
-                    <div class="text-muted fs-4 mx-5 p-2 " style="font-family: Arial, roboto , monospace; text-align:left;">Checkin Requests</div>
-                    <div class="" style="margin-left:12vw; margin-right:12vw;">
-                        <table class="table table-striped text-aligned-center me-2">
-                            <thead>
+                
+                <div class="text-muted fs-4 mx-5 p-2 my-heading txt-left" >Checkin Requests</div>
+                <div class="table-margin" >
+                    <table class="table table-striped text-aligned-center me-2">
+                        <thead>
+                            <tr>
+                                <th scope="col">#</th>
+                                <th scope="col">User Name</th>
+                                <th scope="col">Book Name</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            {{range $i,$entry := .checkins}}
                                 <tr>
-                                    <th scope="col">#</th>
-                                    <th scope="col">User Name</th>
-                                    <th scope="col">Book Name</th>
+                                    <th scope="row">{{add $i 1}}</th>
+                                    <td> &#40;{{ $entry.UUID }}&#41;{{ $entry.USER_NAME }}</td>
+                                    <td> <a href="/books/{{ $entry.BUID }}"> &#40;{{ $entry.BUID }}&#41;{{ $entry.BOOK_NAME }}</a></td>                                     
                                 </tr>
-                            </thead>
-                            <tbody>
-                                {{range $i,$entry := .checkins}}
-                                    <tr>
-                                        <th scope="row">{{add $i 1}}</th>
-                                        <td> &#40;{{ $entry.UUID }}&#41;{{ $entry.USER_NAME }}</td>
-                                        <td> <a href="/books/{{ $entry.BUID }}"> &#40;{{ $entry.BUID }}&#41;{{ $entry.BOOK_NAME }}</a></td>                                     
-                                    </tr>
-                                {{end}}
-                            </tbody>
-                        </table>
-                    </div>
-
-                {{end}}
-            
+                            {{end}}
+                        </tbody>
+                    </table>
+                </div>
+            {{end}}
         </div>
     </div>
     <script src="https://kit.fontawesome.com/e77db821fe.js" crossorigin="anonymous"></script>
