--- a/pkg/templates/signup.html
+++ b/pkg/templates/signup.html
@@ -1,66 +1,67 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kunal_library</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <style>
-        html {
-            height:100vh;
-            width:100vw;
-        }
-        body{
-            height:100%;
-            width:100%;
-        }
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="/styles/common.css" />
 
-    </style>
 </head>
-<body style="padding-top:20vh; background-color:rgb(18, 139, 225);">
+
+<body class="pt25 bg-blue">
 
     <!-- login page card -->
 
-    <div class="container col-sm-12 col-md-7 col-lg-4  "  >
-        <div class="card  " >
-            <div class="card-body " style="border: 2px solid rgba(0, 0, 0, 0.597); border-radius: 7px;">
+    <div class="container col-sm-12 col-md-7 col-lg-4  ">
+        <div class="card  ">
+            <div class="card-body login-pg-border">
                 <h1 class="card-title text-center mb-3 fs-1 fw-bold "> SDSLabs Library </h1>
                 <h5 class="card-title text-center mb-4 fs-3 fw-bolder "> Login </h5>
-                
+
                 <form action="/newUser" method="POST" enctype="multipart/form-datass">
                     <div class="form-floating mb-4">
-                        <input type="text" class="form-control" id="floatingInput" name="name" placeholder="Name"  required>
+                        <input type="text" class="form-control" id="floatingInput" name="name" placeholder="Name"
+                            required>
                         <label for="floatingInput">Full Name</label>
                     </div>
 
                     <div class="form-floating mb-4">
-                        <input type="number" min="1000000000" max="9999999999" class="form-control" id="floatingInput" name="phn_no" placeholder="9999999999" required>
+                        <input type="number" min="1000000000" max="9999999999" class="form-control" id="floatingInput"
+                            name="phn_no" placeholder="9999999999" required>
                         <label for="floatingInput">Phone Number</label>
-                    </div>                    
-                    
+                    </div>
+
                     <div class="form-floating mb-4">
-                        <input type="email" class="form-control" id="floatingInput" name="email" placeholder="name@example.com" required>
+                        <input type="email" class="form-control" id="floatingInput" name="email"
+                            placeholder="name@example.com" required>
                         <label for="floatingInput">Email address</label>
                     </div>
-    
+
                     <div class="form-floating mb-2">
-                        <input type="password" class="form-control" id="floatingPassword" name="password" placeholder="Password" required>
+                        <input type="password" class="form-control" id="floatingPassword" name="password"
+                            placeholder="Password" required>
                         <label for="floatingPassword">Password</label>
                     </div>
                     {{if .}}
                     <div class=" text-center text-danger mb-2">
-                        <label >User ID not available!</label>
+                        <label>User ID not available!</label>
                     </div>
                     {{end}}
                     <div class="d-flex justify-content-center">
-                    
-                        <button type="submit" class="btn " style="background-color:rgb(32, 145, 226); color:white;" >Sign in</button>
+
+                        <button type="submit" class="btn bg-blue2">Sign in</button>
                     </div>
-                    
+
                 </form>
             </div>
         </div>
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
