--- a/pkg/templates/userCvtAdmin.html
+++ b/pkg/templates/userCvtAdmin.html
@@ -1,84 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kunal_Library</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <style>
-        html {
-            height:100vh;
-            width:100vw;
-        }
-        body{
-            height:100%;
-            width:100%;
-        }
-        .navbar-brand, .font{
-            color: white;
-            font-size: 1.5rem;
-            padding: 5px;
-            text-align: center;
-            font-weight: bolder;
-        }
-        .desc{
-            max-width:500px;
-            max-height: 5rem;
-            overflow-y:scroll;
-            -webkit-box-shadow: inset 0px -45px 62px -40px rgba(66, 68, 90, 0.5);
-            -moz-box-shadow: inset 0px -45px 62px -40px rgba(66, 68, 90, 0.5);
-            box-shadow: inset 0px -45px 62px -40px rgba(66, 68, 90, 0.256);
-        }
-        /* width */
-        ::-webkit-scrollbar {
-            width: 10px;
-        }
-        
-        /* Track */
-        ::-webkit-scrollbar-track {
-            background: #f1f1f1;
-        }
-        
-        /* Handle */
-        ::-webkit-scrollbar-thumb {
-            background: #888;
-            border-radius: 8px;
-        }
-        
-        /* Handle on hover */
-        ::-webkit-scrollbar-thumb:hover {
-            background: #555;
-        }
-    </style>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="/styles/common.css" />
+
 </head>
+
 <body>
     {{template "userTopbar" .}}
     <div class="d-flex h-100">
         {{template "userSidebar" .}}
-        
-        <div class="d-flex flex-column w-100 " >
-            <div class="fw-bolder p-2 " style="font-family: Arial, roboto , monospace; font-size:2.5rem; text-align:center;"> Admin Status Request </div>
 
-                <div class="alert alert-warning mx-5" role="alert">
-                    <h4 class="alert-heading">Request for Admin Status</h4>
-                    <p>On this page you can make a request for updating your account to an Admin account and your request will be visisble to all the Admins. An Admin account can modify the book database and does not need to make requests for checkin or checkouts of books moreover it can also approve or deny users' checkin, checkout and Admin status requests. </p>
-                    <hr>
-                    <p class="mb-0">Make an Admin status request.</p>
-                    {{if .applied}}
-                        <button type="button" class="btn btn-danger d-inline mt-2">Request Pending...</button>
-                        <form action="/user/refresh" method="POST" class="d-inline  ms-5 ">
-                            <button type="submit"  value={{.uuid}} name="uuid" value class="btn btn-warning mt-2"  >Refresh</button>
-                        </form>
-                    {{else}}
-                        <form action="/cvt_admin" method="POST" class=" mt-2">
-                            <button type="submit" class="btn btn-warning"  >Admin Request</button>
-                        </form>
-                    {{end}}
-                    </div>
+        <div class="d-flex flex-column w-100 ">
+            <div class="fw-bolder p-2 my-heading size25 txt-center"> Admin Status Request </div>
+
+            <div class="alert alert-warning mx-5" role="alert">
+                <h4 class="alert-heading">Request for Admin Status</h4>
+                <p>On this page you can make a request for updating your account to an Admin account and your request
+                    will be visisble to all the Admins. An Admin account can modify the book database and does not need
+                    to make requests for checkin or checkouts of books moreover it can also approve or deny users'
+                    checkin, checkout and Admin status requests. </p>
+                <hr>
+                <p class="mb-0">Make an Admin status request.</p>
+                {{if .applied}}
+                <button type="button" class="btn btn-danger d-inline mt-2">Request Pending...</button>
+                <form action="/user/refresh" method="POST" class="d-inline  ms-5 ">
+                    <button type="submit" value={{.uuid}} name="uuid" value
+                        class="btn btn-warning mt-2">Refresh</button>
+                </form>
+                {{else}}
+                <form action="/cvt_admin" method="POST" class=" mt-2">
+                    <button type="submit" class="btn btn-warning">Admin Request</button>
+                </form>
+                {{end}}
+            </div>
         </div>
-        
+
     </div>
     <script src="https://kit.fontawesome.com/e77db821fe.js" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
